--- a/schema/schema.tex
+++ b/schema/schema.tex
@@ -137,7 +137,8 @@
         \color{blue} ``start_edit_time'': \color{black} num \\ 
         \color{blue} ``end_edit_time'': \color{black} num \\  
         \color{blue} ``start_comments'': \color{black} str \\ 
-        \color{blue} ``end_comments'': \color{black} str
+        \color{blue} ``end_comments'': \color{black} str \\
+        \color{blue} ``permanent'': \color{black} bool
     };
 
     \draw[edge_style] (main_component) -- (flag) node[midway, anchor=center, left, yshift=-35] {
